made changes in projects and contacts

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Google Fonts -->
   <link
@@ -248,30 +248,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Data Analyst/Scientist</h4>
-              <p><em>Highly motivated and analytical individual with solid commitment to solving complex problems and
-                  leveraging data to
-                  drive insights and business outcomes. Skilled in statistical analysis, predictive modeling, and data
-                  visualization;
-                  proficient in Python, R, SQL, and Tableau to present data in clear and concise manner. Expertise in
-                  leveraging various
-                  technologies and programming languages to extract, transform, and load (ETL) large volumes of data
-                  efficiently while
-                  analyzing complex data sets to uncover valuable insights and drive data- driven decision-making.
-                  Talent for designing
-                  and implementing complex machine learning algorithms and deep learning models also features
-                  engineering, data mining,
-                  and reducing data loss. Deft at translating complex technical concepts into actionable insights for
-                  non-technical
-                  stakeholders. Possess solid understanding of statistical methodologies, hypothesis testing, and
-                  machine learning
-                  algorithms. Proactive and life-long learner committed to staying up-to-date with emerging technologies
-                  and best
-                  practices in both data science and software development.</em></p>
 
-            </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
@@ -317,53 +294,62 @@
               </ul>
               </p>
             </div>
-            <div class="col-lg-6">
-              <h3 class="resume-title">Professional Experience</h3>
-              <div class="resume-item">
-                <h4>Data Science Intern </h4>
-                <h5>2019 - Present</h5>
-                <p><em>AIML Analytics, Hyderabad, India </em></p>
-                <p>Highly motivated and analytical individual with solid commitment to solving complex problems and
-                  leveraging data to
-                  drive insights and business outcomes. Skilled in statistical analysis, predictive modeling, and data
-                  visualization;
-                  proficient in Python, R, SQL, and Tableau to present data in clear and concise manner. Expertise in
-                  leveraging various
-                  technologies and programming languages to extract, transform, and load (ETL) large volumes of data
-                  efficiently while
-                  analyzing complex data sets to uncover valuable insights and drive data- driven decision-making.
-                  Talent for designing
-                  and implementing complex machine learning algorithms and deep learning models also features
-                  engineering, data mining,
-                  and reducing data loss. Deft at translating complex technical concepts into actionable insights for
-                  non-technical
-                  stakeholders. Possess solid understanding of statistical methodologies, hypothesis testing, and
-                  machine learning
-                  algorithms. Proactive and life-long learner committed to staying up-to-date with emerging technologies
-                  and best
-                  practices in both data science and software development</p>
-                <p>
-                <ul>
-                  <li>Employed different CNN architectures, including activation functions, pooling, and convolutional
-                    layers, resulting in
-                    significantly improved accuracy by 30%.</li>
-                  <li>Implemented data strategies and developed physical data models aligned with organization's
-                    objectives, to enhance data
-                    governance and better decision-making. </li>
-                  <li>Evaluated existing data systems and worked with development team to create conceptual data models
-                    and data flow to
-                    identify gaps and opportunities for improvement</li>
+          </div>
+          <div class="col-lg-6">
+            <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>Data Science Intern </h4>
+              <h5>2019 - Present</h5>
+              <p><em>AIML Analytics, Hyderabad, India </em></p>
+              <p>Highly motivated and analytical individual with solid commitment to solving complex problems and
+                leveraging data to
+                drive insights and business outcomes. Skilled in statistical analysis, predictive modeling, and data
+                visualization;
+                proficient in Python, R, SQL, and Tableau to present data in clear and concise manner. Expertise in
+                leveraging various
+                technologies and programming languages to extract, transform, and load (ETL) large volumes of data
+                efficiently while
+                analyzing complex data sets to uncover valuable insights and drive data- driven decision-making.
+                Talent for designing
+                and implementing complex machine learning algorithms and deep learning models also features
+                engineering, data mining,
+                and reducing data loss. Deft at translating complex technical concepts into actionable insights for
+                non-technical
+                stakeholders. Possess solid understanding of statistical methodologies, hypothesis testing, and
+                machine learning
+                algorithms. Proactive and life-long learner committed to staying up-to-date with emerging technologies
+                and best
+                practices in both data science and software development</p>
+              <p>
+              <ul>
+                <li>Employed different CNN architectures, including activation functions, pooling, and convolutional
+                  layers, resulting in
+                  significantly improved accuracy by 30%.</li>
+                <li>Implemented data strategies and developed physical data models aligned with organization's
+                  objectives, to enhance data
+                  governance and better decision-making. </li>
+                <li>Evaluated existing data systems and worked with development team to create conceptual data models
+                  and data flow to
+                  identify gaps and opportunities for improvement</li>
 
-                </ul>
-                </p>
-              </div>
-
+              </ul>
+              </p>
             </div>
+
           </div>
 
 
+
         </div>
-        <button onclick="openResumePage()">View Full Resume</button>
+        <div class="col-lg-12 d-flex justify-content-center">
+
+
+          <button onclick="openResumePage()" id="viewrtesume">View Full Resume</button>
+
+
+        </div>
+
+
         <!-- </section>End Resume Section -->
         <script>
           function openResumePage() {
@@ -405,14 +391,7 @@
                   <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
                     officiaExcepteur
                     sint occaecat cupidatat non proident, sunt in culpa qui officiaExcepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officiaExcepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                    officiaExcepteur sint occaecat cupidatat non proident, sunt in culpa qui officiaExcepteur sint
-                    occaecat
-                    cupidatat non proident, sunt in culpa qui officiaExcepteur sint occaecat cupidatat non proident,
-                    sunt in
-                    culpa qui officiaExcepteur sint occaecat cupidatat non proident, sunt in culpa qui officiaExcepteur
-                    sint
-                    occaecat cupidatat non proident, sunt in culpa qui officiaExcepteur sint occaecat cupidatat non
+                    on
                     proident, sunt in culpa qui officia</p>
                 </div>
               </div>
@@ -420,8 +399,8 @@
               <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box">
                   <div class="icon"><i class="bx bx-world"></i></div>
-                  <h4 class="title"><a href="">Nemo Enim</a></h4>
-                  <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+                  <h4 class="title"><a href="">Online Attendance System</a></h4>
+                  <p class="description">Online Attendance System of MREC</p>
                 </div>
               </div>
 
@@ -595,7 +574,7 @@
         </section><!-- End Portfolio Section -->
 
         <!-- ======= Testimonials Section ======= -->
-        <section id="contact" class="contact section-bg">
+        <section class="contact section-bg">
           <div class="container">
 
             <div class="section-title d-flex flex-column align-items-center justify-content-center">
@@ -613,14 +592,10 @@
                   </div>
 
                   <div class="d-flex align-items-center mt-4">
-                    <i class="bi bi-envelope"></i>
+                    <i class="bi bi-robot"></i>
                     <p>Machine Learning</p>
                   </div>
 
-                  <div class="d-flex align-items-center mt-4">
-                    <i class="bi bi-phone"></i>
-                    <p>Python Development</p>
-                  </div>
 
                 </div>
               </div>
@@ -628,38 +603,32 @@
               <div class="col-lg col-md">
                 <div class="info">
                   <div class="d-flex align-items-center">
-                    <i class="bi bi-geo-alt"></i>
-                    <p>Java Development<br></p>
+                    <i class="bi bi-filetype-py"></i>
+                    <p>Python Development<br></p>
                   </div>
 
                   <div class="d-flex align-items-center mt-4">
-                    <i class="bi bi-envelope"></i>
+                    <i class="bi bi-code-slash"></i>
                     <p>Web Development</p>
                   </div>
 
-                  <div class="d-flex align-items-center mt-4">
-                    <i class="bi bi-phone"></i>
-                    <p>Collaboration</p>
-                  </div>
+
 
                 </div>
               </div>
               <div class="col-lg col-md">
                 <div class="info">
                   <div class="d-flex align-items-center">
-                    <i class="bi bi-geo-alt"></i>
+                    <i class="bi bi-filetype-java"></i>
                     <p>Java Development<br></p>
                   </div>
 
                   <div class="d-flex align-items-center mt-4">
-                    <i class="bi bi-envelope"></i>
-                    <p>Web Development</p>
-                  </div>
-
-                  <div class="d-flex align-items-center mt-4">
-                    <i class="bi bi-phone"></i>
+                    <i class="bi bi-microsoft-teams"></i>
                     <p>Collaboration</p>
                   </div>
+
+
 
                 </div>
               </div>
@@ -679,10 +648,7 @@
 
             <div class="section-title">
               <h2>Contact</h2>
-              <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-                consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat
-                sit
-                in iste officiis commodi quidem hic quas.</p>
+
             </div>
 
             <div class="row">
@@ -690,9 +656,9 @@
               <div class="col-lg-4 col-md-4">
                 <div class="contact-about">
                   <h3>SWAPNIL</h3>
-                  <p>Cras fermentum odio eu feugiat. Justo eget magna fermentum iaculis eu non diam phasellus.
-                    Scelerisque
-                    felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
+                  <p>I would love to hear from you! Whether you have a project in mind, a collaboration opportunity, or
+                    simply want to
+                    connect, feel free to reach out using the contact information provided.</p>
                   <div class="social-links">
                     <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> 
