--- a/index.html
+++ b/index.html
@@ -27,12 +27,30 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <style>
+    .cursor {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      pointer-events: none;
+      z-index: 9999;
+      background-color: #ff4081;
+      opacity: 0.8;
+      transform: translate(-50%, -50%);
+    }
+
+    /* Add animation and customize cursor appearance here */
+  </style>
+
 
 
 </head>
 
 <body>
-
+  <div class="cursor"></div>
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column align-items-center justify-content-center">
     <h1>Hi, I'm SWAPNIL!</h1>
@@ -55,10 +73,11 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto" href="#resume">Resume</a></li>
           <!-- <li><a class="nav-link scrollto" href="#resume">Resume</a></li> -->
           <li><a class="nav-link scrollto" href="#services">Projects</a></li>
           <li><a class="nav-link scrollto" href="#portfolio">Certifications</a></li>
-          <li><a class="nav-link scrollto" href="#resume">Resume</a></li>
+
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -94,12 +113,20 @@
           <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
           <div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch">
             <div class="content d-flex flex-column justify-content-center">
-              <h3>Voluptatem dignissimos provident quasi</h3>
+              <h3>Unleash the Power of Data: Seeking a Data Adventure!</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                Ready to embark on a data-driven journey? I'm a highly passionate Data Analyst/Scientist seeking new
+                opportunities to
+                explore the vast world of data. With expertise in statistical analysis, predictive modeling, and data
+                visualization, I'm
+                skilled at transforming raw data into valuable insights. Proficient in Python, R, SQL, and Tableau, I
+                thrive on tackling
+                complex problems and driving data-informed decision-making. Let's collaborate on innovative projects,
+                uncover patterns,
+                and create actionable solutions. Join me as we unleash the power of data and embark on exciting new
+                adventures!
               </p>
-              <div class="row">
+              <!-- <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="bi bi-emoji-smile"></i>
@@ -137,13 +164,82 @@
                     <p><strong>Awards</strong> rerum asperiores dolor alias quo reprehenderit eum et nemo pad der</p>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div><!-- End .content-->
           </div>
         </div>
 
       </div>
     </section><!-- End About Section -->
+
+    <!-- ============area of expert -->
+    <section class="contact section-bg">
+      <div class="container">
+
+        <div class="section-title d-flex flex-column align-items-center justify-content-center">
+          <h2>My Areas of Focus</h2>
+          <h3>Explore some of the areas I'm passionate about:</h3>
+        </div>
+
+        <div class="row areasofinte">
+
+          <div class="col-lg col-md">
+            <div class="info">
+              <div class="d-flex align-items-center">
+                <i class="bi bi-graph-up-arrow"></i>
+                <p>Data Analytics<br></p>
+              </div>
+
+              <div class="d-flex align-items-center mt-4">
+                <i class="bi bi-robot"></i>
+                <p>Machine Learning</p>
+              </div>
+
+
+            </div>
+          </div>
+
+          <div class="col-lg col-md">
+            <div class="info">
+              <div class="d-flex align-items-center">
+                <i class="bi bi-filetype-py"></i>
+                <p>Python Development<br></p>
+              </div>
+
+              <div class="d-flex align-items-center mt-4">
+                <i class="bi bi-code-slash"></i>
+                <p>Web Development</p>
+              </div>
+
+
+
+            </div>
+          </div>
+          <div class="col-lg col-md">
+            <div class="info">
+              <div class="d-flex align-items-center">
+                <i class="bi bi-filetype-java"></i>
+                <p>Java Development<br></p>
+              </div>
+
+              <div class="d-flex align-items-center mt-4">
+                <i class="bi bi-microsoft-teams"></i>
+                <p>Collaboration</p>
+              </div>
+
+
+
+            </div>
+          </div>
+
+
+
+
+        </div>
+
+      </div>
+    </section>
+    <!-- end expert -->
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
@@ -574,72 +670,7 @@
         </section><!-- End Portfolio Section -->
 
         <!-- ======= Testimonials Section ======= -->
-        <section class="contact section-bg">
-          <div class="container">
 
-            <div class="section-title d-flex flex-column align-items-center justify-content-center">
-              <h2>My Areas of Focus</h2>
-              <h3>Explore some of the areas I'm passionate about:</h3>
-            </div>
-
-            <div class="row areasofinte">
-
-              <div class="col-lg col-md">
-                <div class="info">
-                  <div class="d-flex align-items-center">
-                    <i class="bi bi-graph-up-arrow"></i>
-                    <p>Data Analytics<br></p>
-                  </div>
-
-                  <div class="d-flex align-items-center mt-4">
-                    <i class="bi bi-robot"></i>
-                    <p>Machine Learning</p>
-                  </div>
-
-
-                </div>
-              </div>
-
-              <div class="col-lg col-md">
-                <div class="info">
-                  <div class="d-flex align-items-center">
-                    <i class="bi bi-filetype-py"></i>
-                    <p>Python Development<br></p>
-                  </div>
-
-                  <div class="d-flex align-items-center mt-4">
-                    <i class="bi bi-code-slash"></i>
-                    <p>Web Development</p>
-                  </div>
-
-
-
-                </div>
-              </div>
-              <div class="col-lg col-md">
-                <div class="info">
-                  <div class="d-flex align-items-center">
-                    <i class="bi bi-filetype-java"></i>
-                    <p>Java Development<br></p>
-                  </div>
-
-                  <div class="d-flex align-items-center mt-4">
-                    <i class="bi bi-microsoft-teams"></i>
-                    <p>Collaboration</p>
-                  </div>
-
-
-
-                </div>
-              </div>
-
-
-
-
-            </div>
-
-          </div>
-        </section>
 
 
         <!-- ======= Contact Section ======= -->
@@ -665,6 +696,8 @@
                 <a href="#" class="instagram"><i class="bi bi-instagram"></i></a> -->
                     <a href="https://www.linkedin.com/in/swapnilreddycheerla/" class="linkedin"><i
                         class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/SwapnilCheerla" class="github"><i class="bi bi-github"></i></a>
+
 
                   </div>
                 </div>
@@ -747,6 +780,24 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script>
+    document.addEventListener("mousemove", function (event) {
+      var cursor = document.querySelector(".cursor");
+      cursor.style.left = event.clientX + "px";
+      cursor.style.top = event.clientY + "px";
+    });
+
+    document.addEventListener("mousedown", function () {
+      var cursor = document.querySelector(".cursor");
+      cursor.style.transform = "scale(1.2)";
+    });
+
+    document.addEventListener("mouseup", function () {
+      var cursor = document.querySelector(".cursor");
+      cursor.style.transform = "scale(1)";
+    });
+
+  </script>
 
 </body>
 
