projects section created links to be added

--- a/index.html
+++ b/index.html
@@ -315,6 +315,18 @@
       </div>
     </section><!-- End Skills Section -->
 
+    <!-- Ranks of competative  -->
+    <section class="section-bg">
+      <div class="container">
+        <div class="section-title">
+          <h2> Ranks</h2>
+
+        </div>
+
+      </div>
+    </section>
+    <!-- end of competative -->
+
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume section-bg">
       <div class="container">
@@ -467,15 +479,15 @@
                 <div class="icon-box">
                   <div class="icon"><i class="bx bxl-dribbble"></i></div>
                   <h4 class="title"><a href="">Housing Project</a></h4>
-                  <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                  <p class="description">links are coming soon ! </p>
                 </div>
               </div>
 
               <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box">
                   <div class="icon"><i class="bx bx-file"></i></div>
-                  <h4 class="title"><a href="">Colorie Counter Using Python</a></h4>
-                  <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                  <h4 class="title"><a href="">Colorie Counter </a></h4>
+                  <p class="description">links are coming soon!
                   </p>
                 </div>
               </div>
@@ -483,12 +495,8 @@
               <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box">
                   <div class="icon"><i class="bx bx-tachometer"></i></div>
-                  <h4 class="title"><a href="">Online Loan Application And Tracting</a></h4>
-                  <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                    officiaExcepteur
-                    sint occaecat cupidatat non proident, sunt in culpa qui officiaExcepteur sint occaecat cupidatat non
-                    on
-                    proident, sunt in culpa qui officia</p>
+                  <h4 class="title"><a href="">Online Loan Application</a></h4>
+                  <p class="description">links are coming soon</p>
                 </div>
               </div>
 
@@ -496,7 +504,7 @@
                 <div class="icon-box">
                   <div class="icon"><i class="bx bx-world"></i></div>
                   <h4 class="title"><a href="">Online Attendance System</a></h4>
-                  <p class="description">Online Attendance System of MREC</p>
+                  <p class="description">links are coming soon!</p>
                 </div>
               </div>
 
