made changes in portfolio projects and certification links are attached

--- a/index.html
+++ b/index.html
@@ -477,17 +477,20 @@
             <div class="row">
               <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box">
-                  <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                  <h4 class="title"><a href="">Housing Project</a></h4>
-                  <p class="description">links are coming soon ! </p>
+                  <div class="icon"><i class="bi bi-house-check-fill"></i></div>
+                  <h4 class="title"><a href="housingproject.html">Housing Project</a></h4>
+                  <p class="description">Finding the Location for the given Budget
+                    Based on required features
+                  </p>
                 </div>
               </div>
 
               <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box">
-                  <div class="icon"><i class="bx bx-file"></i></div>
-                  <h4 class="title"><a href="">Colorie Counter </a></h4>
-                  <p class="description">links are coming soon!
+                  <div class="icon"><i class="bi bi-lungs-fill"></i></div>
+                  <h4 class="title"><a href="colorie.html">Colorie Counter Using Django </a></h4>
+                  <p class="description">Colorie Calculator to record and Estimate number of Colories We need to consume
+                    daily
                   </p>
                 </div>
               </div>
@@ -495,16 +498,18 @@
               <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box">
                   <div class="icon"><i class="bx bx-tachometer"></i></div>
-                  <h4 class="title"><a href="">Online Loan Application</a></h4>
-                  <p class="description">links are coming soon</p>
+                  <h4 class="title"><a href="loan.html">Online Loan Application</a></h4>
+                  <p class="description">web-application automates the activities performed at a finance corporation
+                    like issuing various loans</p>
                 </div>
               </div>
 
               <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box">
-                  <div class="icon"><i class="bx bx-world"></i></div>
-                  <h4 class="title"><a href="">Online Attendance System</a></h4>
-                  <p class="description">links are coming soon!</p>
+                  <div class="icon"><i class="bi bi-laptop"></i></div>
+                  <h4 class="title"><a href="Attend.html">Online Attendance System</a></h4>
+                  <p class="description">online tools for school administration to monitor and manage students
+                    attendance</p>
                 </div>
               </div>
 
@@ -542,12 +547,13 @@
                     <img src="assets/img/portfolio/python1.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
                       <h4>Python </h4>
-                      <p>App</p>
+                      <!-- <p>App</p> -->
                     </div>
                     <div class="portfolio-links">
                       <a href="assets/img/portfolio/python1.png" data-gallery="portfolioGallery"
                         class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                      <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                      <a href="https://coursera.org/share/79ee01c47f0e3d5f15342ed2f98ddb8f" title="More Details"><i
+                          class="bx bx-link"></i></a>
                     </div>
                   </div>
                 </div>
@@ -557,12 +563,13 @@
                     <img src="assets/img/portfolio/AWSUde.jpeg" class="img-fluid" alt="">
                     <div class="portfolio-info">
                       <h4>Machine Learning</h4>
-                      <p>Web</p>
+                      <!-- <p>Web</p> -->
                     </div>
                     <div class="portfolio-links">
                       <a href="assets/img/portfolio/AWSUde.jpeg" data-gallery="portfolioGallery"
                         class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                      <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                      <a href="https://www.ude.my/UC-e1a8ef80-3594-4998-bd7c-603f52f432bd/" title="More Details"><i
+                          class="bx bx-link"></i></a>
                     </div>
                   </div>
                 </div>
@@ -572,12 +579,13 @@
                     <img src="assets/img/portfolio/pythonEB.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
                       <h4>Python 2</h4>
-                      <p>App</p>
+                      <!-- <p>App</p> -->
                     </div>
                     <div class="portfolio-links">
                       <a href="assets/img/portfolio/pythonEB.png" data-gallery="portfolioGallery"
                         class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                      <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                      <a href="https://coursera.org/share/c0fffbf062c2464af95d516774fe8144" title="More Details"><i
+                          class="bx bx-link"></i></a>
                     </div>
                   </div>
                 </div>
@@ -586,13 +594,14 @@
                   <div class="portfolio-wrap">
                     <img src="assets/img/portfolio/javaHR.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                      <h4>Card 2</h4>
-                      <p>Card</p>
+                      <h4>JAVA</h4>
+                      <!-- <p>Card</p> -->
                     </div>
                     <div class="portfolio-links">
                       <a href="assets/img/portfolio/javaHR.png" data-gallery="portfolioGallery"
                         class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                      <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                      <a href="https://www.hackerrank.com/certificates/19e05895f212 " title="More Details"><i
+                          class="bx bx-link"></i></a>
                     </div>
                   </div>
                 </div>
@@ -617,12 +626,13 @@
                     <img src="assets/img/portfolio/MLcoursera.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
                       <h4>Machine Learning</h4>
-                      <p>App</p>
+                      <!-- <p>App</p> -->
                     </div>
                     <div class="portfolio-links">
                       <a href="assets/img/portfolio/MLcoursera.png" data-gallery="portfolioGallery"
                         class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                      <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                      <a href="https://coursera.org/share/07cf65aca555d0dc5eb3fc671b7d7679" title="More Details"><i
+                          class="bx bx-link"></i></a>
                     </div>
                   </div>
                 </div>
@@ -631,13 +641,14 @@
                   <div class="portfolio-wrap">
                     <img src="assets/img/portfolio/pythonHR.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                      <h4>Card 1</h4>
-                      <p>Card</p>
+                      <h4>Python</h4>
+                      <!-- <p>Card</p> -->
                     </div>
                     <div class="portfolio-links">
                       <a href="assets/img/portfolio/pythonHR.png" data-gallery="portfolioGallery"
                         class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                      <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                      <a href="https://www.hackerrank.com/certificates/d5fea237f9e9" title="More Details"><i
+                          class="bx bx-link"></i></a>
                     </div>
                   </div>
                 </div>
@@ -646,13 +657,14 @@
                   <div class="portfolio-wrap">
                     <img src="assets/img/portfolio/SQLHR.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                      <h4>Card 3</h4>
-                      <p>Card</p>
+                      <h4>SQL</h4>
+                      <!-- <p>Card</p> -->
                     </div>
                     <div class="portfolio-links">
                       <a href="assets/img/portfolio/SQLHR.png" data-gallery="portfolioGallery"
                         class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                      <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                      <a href="https://www.hackerrank.com/certificates/e792c5bde736" title="More Details"><i
+                          class="bx bx-link"></i></a>
                     </div>
                   </div>
                 </div>
