made update navbar links

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
               <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box">
                   <div class="icon"><i class="bi bi-house-check-fill"></i></div>
-                  <h4 class="title"><a href="housingproject.html">Housing Project</a></h4>
+                  <h4 class="title"><a href="housingproject.html"><i class="bx bx-link"></i>Housing Project</a></h4>
                   <p class="description">Finding the Location for the given Budget
                     Based on required features
                   </p>
@@ -488,7 +488,8 @@
               <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box">
                   <div class="icon"><i class="bi bi-lungs-fill"></i></div>
-                  <h4 class="title"><a href="colorie.html">Colorie Counter Using Django </a></h4>
+                  <h4 class="title"><a href="colorie.html"><i class="bx bx-link"></i>Colorie Counter Using Django </a>
+                  </h4>
                   <p class="description">Colorie Calculator to record and Estimate number of Colories We need to consume
                     daily
                   </p>
@@ -498,7 +499,7 @@
               <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box">
                   <div class="icon"><i class="bx bx-tachometer"></i></div>
-                  <h4 class="title"><a href="loan.html">Online Loan Application</a></h4>
+                  <h4 class="title"><a href="loan.html"><i class="bx bx-link"></i>Online Loan Application</a></h4>
                   <p class="description">web-application automates the activities performed at a finance corporation
                     like issuing various loans</p>
                 </div>
@@ -507,7 +508,7 @@
               <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box">
                   <div class="icon"><i class="bi bi-laptop"></i></div>
-                  <h4 class="title"><a href="Attend.html">Online Attendance System</a></h4>
+                  <h4 class="title"><a href="Attend.html"><i class="bx bx-link"></i>Online Attendance System</a></h4>
                   <p class="description">online tools for school administration to monitor and manage students
                     attendance</p>
                 </div>
