--- a/housingproject.html
+++ b/housingproject.html
@@ -46,8 +46,8 @@
           <li><a class="nav-link scrollto " href="index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
           <li><a class="nav-link scrollto" href="index.html#resume">Resume</a></li>
-          <li><a class="nav-link scrollto" href="index.html#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="index.html#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto" href="index.html#services">Project</a></li>
+          <li><a class="nav-link scrollto" href="index.html#portfolio">Certifications</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="housingproject.html">Housing Project</a></li>
@@ -84,7 +84,7 @@
           <h2>Portfolio Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li><a href="index.html#portfolio">Portfolio</a></li>
+            <li><a href="index.html#services">Projects</a></li>
             <li>Portfolio Details</li>
           </ol>
         </div>
