games section added

--- a/index.html
+++ b/index.html
@@ -320,7 +320,29 @@
     <section class="section-bg">
       <div class="container">
         <div class="section-title">
-          <h2> Ranks</h2>
+          <h2>Favorite Game</h2>
+          <p>
+            One of my all-time favorite games is "Quick, Draw!" by Google. It's a fun and interactive online game where
+            you are
+            given prompts to draw various objects, and an artificial intelligence tries to guess what you're drawing in
+            real time.
+            It's not only entertaining but also a great way to improve your drawing skills.
+          </p>
+          <p>
+            Moreover, "Quick, Draw!" provides an opportunity to contribute to machine learning research. By playing the
+            game, you
+            can help teach the AI by adding your drawings to the world's largest doodling data set. Your drawings will
+            be shared
+            publicly to assist researchers in advancing machine learning algorithms. It's a unique way to make a
+            meaningful impact
+            while having fun!
+          </p>
+          <p>
+            If you want to give it a try and contribute your drawings, visit the <a
+              href="https://quickdraw.withgoogle.com/" target="_blank">official "Quick, Draw!" website</a> and start
+            playing. Get ready to doodle and be part of an
+            exciting research project!
+          </p>
 
         </div>
 
@@ -408,7 +430,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Data Science Intern </h4>
-              <h5>2019 - Present</h5>
+              <h5>2020 - 2021</h5>
               <p><em>AIML Analytics, Hyderabad, India </em></p>
               <p>Highly motivated and analytical individual with solid commitment to solving complex problems and
                 leveraging data to
