--- a/index.html
+++ b/index.html
@@ -258,17 +258,17 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">PYTHON <i class="val">100%</i></span>
+              <span class="skill">PYTHON <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">SQL <i class="val">90%</i></span>
+              <span class="skill">SQL <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -280,6 +280,21 @@
                 </div>
               </div>
             </div>
+            <div class="progress">
+              <span class="skill">SPREADSHEET<i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+            <div class="progress">
+              <span class="skill">Flask <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
 
           </div>
 
@@ -305,6 +320,20 @@
               <span class="skill">JAVASCRIPT <i class="val">55%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+            <div class="progress">
+              <span class="skill">DJANGO<i class="val">55%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+            <div class="progress">
+              <span class="skill">REACTJS <i class="val">40%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -566,6 +595,21 @@
 
               <div class="row portfolio-container">
 
+                <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                  <div class="portfolio-wrap">
+                    <img src="assets/img/portfolio/DataAnalyst.png" class="img-fluid" alt="">
+                    <div class="portfolio-info">
+                      <h4>Google Data Analytics </h4>
+                      <!-- <p>App</p> -->
+                    </div>
+                    <div class="portfolio-links">
+                      <a href="assets/img/portfolio/DataAnalyst.png" data-gallery="portfolioGallery"
+                        class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                      <a href="https://coursera.org/share/2d8ae017d139793e4ee24fde9a6c378b" title="More Details"><i
+                          class="bx bx-link"></i></a>
+                    </div>
+                  </div>
+                </div>
                 <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                   <div class="portfolio-wrap">
                     <img src="assets/img/portfolio/python1.png" class="img-fluid" alt="">
